# rust-samples

./: .gitignore  Cargo.toml
listing_4_11_init_structs/: Cargo.toml
listing_4_11_init_structs/src/: main.rs
listing_4_12_extract_structs/: Cargo.toml
listing_4_12_extract_structs/src/: main.rs
listing_4_13_tupel_structs/: Cargo.toml
listing_4_13_tupel_structs/src/: main.rs
listing_4_13_tuple_structs/: Cargo.toml
listing_4_14_enums/: Cargo.toml
listing_4_14_enums/src/: main.rs
listing_4_15_enum_types/: Cargo.toml
listing_4_15_enum_types/src/: main.rs
listing_5_01_match_scalar/: Cargo.toml
listing_5_01_match_scalar/src/: main.rs
listing_5_02_match_return/: Cargo.toml
listing_5_02_match_return/src/: main.rs
listing_5_03_match_if/: Cargo.toml
listing_5_03_match_if/src/: main.rs
listing_5_04_match_assign/: Cargo.toml
listing_5_04_match_assign/src/: main.rs
listing_5_05_match_at/: Cargo.toml
listing_5_05_match_at/src/: main.rs
listing_5_06_match_tuple/: Cargo.toml
listing_5_06_match_tuple/src/: main.rs
listing_5_07_match_struct/: Cargo.toml
listing_5_07_match_struct/src/: main.rs
listing_5_08_match_enum/: Cargo.toml
listing_5_08_match_enum/src/: main.rs
listing_5_09_if_let/: Cargo.toml
listing_5_10_while_let/: Cargo.toml
listing_5_11_matches_macro/: Cargo.toml
listing_7_08_mut_var_with_ref/: Cargo.toml
listing_8_01_type_param_structs/: Cargo.toml
listing_8_03_type_param_with_enum/: Cargo.toml
listing_9_01_methods_struct/: Cargo.toml
listing_9_02_methods_type_param_with_enum/: Cargo.toml
(+8 files in other folders)
