[workspace]

members = [
	"listing_4_11_init_structs",
	"listing_4_12_extract_structs",
	"listing_4_13_tuple_structs",
	"listing_4_14_enums",
	"listing_4_15_enum_types",
	"listing_5_01_match_scalar",
	"listing_5_02_match_return",
	"listing_5_03_match_if",
	"listing_5_04_match_assign",
	"listing_5_05_match_at",
	"listing_5_06_match_tuple",
	"listing_5_07_match_struct",
	"listing_5_08_match_enum",
	"listing_5_09_if_let",
	"listing_5_10_while_let",
	"listing_5_11_matches_macro",
	"listing_7_08_mut_var_with_ref",
	"listing_8_01_type_param_structs",
	"listing_8_03_type_param_with_enum",
]
